--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My First Github Repo</title>
 </head>
 <body>
-    
+    <h1>i can push to github</h1>
+    <h2>i can code now</h2>
+    <h3>lets code our dream</h3>
 </body>
 </html>
